updates to CRISPR

--- a/pages/excientia.html
+++ b/pages/excientia.html
@@ -124,7 +124,7 @@
                     <section class="section-container">
                          <h2 class="list-header">Valuation</h2>
                          <p class="profiles">
-                              Cash $560 million Pounds or $672 USD
+                              Cash $560 million Pounds or $672 million USD
                          </p>
                          <p class="profiles">
                               EXALT 1:
