--- a/pages/intellia.html
+++ b/pages/intellia.html
@@ -84,6 +84,10 @@
                               Phase 1
                          </p>
                          <p class="profiles">
+                              NTLA-3001 AATD<progress class="progress-bar" value="10" max="100"></progress>
+                              IND Enabling Studies
+                         </p>
+                         <p class="profiles">
                               NTLA-2003 AATD<progress class="progress-bar" value="10" max="100"></progress>
                               IND Enabling Studies
                          </p>
@@ -107,6 +111,16 @@
                               event time improvement.
                          </p>
                          <p class="profiles">
+                              NTLA-3001 is their therapy for AAT where they attempt to insert the SERPINA1 gene. I would think they are attempting 
+                              this by Homology Directed Repair using a template strand. I find this program extremely concerning as so much 
+                              could go wrong with this program. I expect it to fail and be discontinued for NTLA-2003.
+                         </p>
+                         <p class="profiles">
+                              NTLA-2003 is their therapy for AAT where they attempt to knockout the SERPINA1 gene. I suspect this would 
+                              work very much like RNAi knockout programs for this target, but in a permanent manor. I find this program 
+                              safer than the NTLA-3001 approach. It would compete with RNAi in a competitive space though.
+                         </p>
+                         <p class="profiles">
                               NTLA-6001 is allogeneic CAR-T therapy targeting CD30 in Lymphomas. They are testing out a potential 
                               immune evasion strategy where they knock out the HLA-A but match the HLA-B and HLA-C. I honestly do not 
                               see the value to this. It seems like a really weak attempt at immune evasion. The whole point of knocking 
@@ -121,7 +135,7 @@
                          </p>
                          <p class="profiles">
                               NTLA-2001 is shared 75% Intellia and 25% Regeneron. Their first program is for hATTR. This is about
-                              50,000 in the US for all forms. I think they could do about 2,000 per year for at least
+                              50,000 world wide. I think they could do about 2,000 per year for at least
                               $2 million price as RNAi alternatives cost nearly $600,000 per year. I could see at least up to
                               $4 billion sales. That would entitle Intellia to $3 billion in sales. With good phase 1 data, I would 
                               put this multiple at .5 right now. That makes it worth $1.5 billion value.
@@ -132,11 +146,19 @@
                               give this program .5 multiple based on the early data. That makes it worth $500 million value.
                          </p>
                          <p class="profiles">
+                              NTLA-3001 is expected to fail. I don't think I will give this program any value at all.
+                         </p>
+                         <p class="profiles">
+                              NTLA-2003 is their gene knockout for AATD. There are estimated to be about 60,000 AATD patients 
+                              in the US. I think they could capture a few thousand of them for $2 million price. That could make 
+                              this program worth $2 billion or more in revenues. I would put a .1 multiplier on that for precilinical.
+                              That makes it worth $200 million value.
+                         </p>
+                         <p class="profiles">
                               NTLA-6001 is a CAR-T therapy for Lymphoma. I don't think I will give this program any value at all.
                          </p>
                          <p class="profiles">
-                              All in, that is a $3.3 billion market cap. Based on the 79 shares outstanding
-                              on the 10Q, that comes to $41.77. 
+                              All in, that is a $3.5 billion market cap. Based on the 79 million shares outstanding, that comes to $44.30. 
                          </p>
                     </section>  
 
@@ -146,10 +168,13 @@
                               NTLA-2001 Expect US IND submission in mid 2023
                          </p>
                          <p class="profiles">
-                              NTLA-2002 IND submission and start of phase 2 in 1H 2023
+                              NTLA-2002 IND submission in US and start of phase 2 in 1H 2023
                          </p>
                          <p class="profiles">
                               NTLA-3001 IND submission 2H of 2023
+                         </p>
+                         <p class="profiles">
+                              NTLA-2003 Complete IND activities by end of 2023
                          </p>
                          <p class="profiles">
                               NTLA-6001 Looking for collaboration opportunities
