--- a/pages/prime.html
+++ b/pages/prime.html
@@ -55,7 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <p class="updated">Last Updated 1/12/2023</p>
+               <p class="updated">Last Updated 1/13/2023</p>
 
                <h1 class="company-name">Prime Medicine</h1>
 
@@ -121,7 +121,8 @@
                          <p class="profiles">
                               Chronic Granulomatous Disease is an extremely rare disease where Macrophages have a genetic defect which prevents
                               them from being able to destroy the ingested pathogens they take in. It is estimated that only 20 people are born 
-                              with this disease in the US each year. I can't see this earning any money commercially.
+                              CGD each year. Their approach is to edit iPSC stem cells to replace the defective stem cells. With this being a stem 
+                              cell therapy, all those errors by Reverse Transcriptase will be in there forever to mutate and cause disease or cancer.
                          </p>
                     </section>  
 
