--- a/pages/schrodinger.html
+++ b/pages/schrodinger.html
@@ -116,7 +116,7 @@
                     <section class="section-container">
                          <h2 class="list-header">Valuation</h2>
                          <p class="profiles">
-                              Cash $597
+                              Cash $597 million
                          </p>
                          <p class="profiles">
                               Sales are projected to be $194 million in revenues for 2023 with their software side of the business. 
