--- a/pages/verve.html
+++ b/pages/verve.html
@@ -55,7 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <p class="updated">Last Updated 1/12/2023</p>
+               <p class="updated">Last Updated 1/13/2023</p>
 
                <h1 class="company-name">Verve Therapeutics</h1>
 
@@ -67,10 +67,10 @@
                          <p class="profiles">
                               Verve is one of the two companies working with Base Editing. They licensed the technology from Beam 
                               Therapeutics. They have the right to pick 4 gene targets for cardiovascular diseases. They have picked 
-                              PCSK9 and ANGPTL3 so far. They have 2 more they can pick. They also have a license for CRISPR CAS12 which
-                              they license from Broad Institute and Harvard. They also have a development platform for guided 
-                              LNP delivery. They use this delivery technology for their liver targets which is designed to target GalNac.
-                              They also license this guided LNP to Beam Therapeutics. 
+                              PCSK9 and ANGPTL3 so far, and have 2 more they can pick. They have a license for CRISPR CAS12 which
+                              they license from Broad Institute and Harvard. Verve has a development platform for guided 
+                              LNP delivery. They have a delivery technology for their liver targets which is designed to target GalNac.
+                              Beam licenses this guided LNP from them for some of its liver programs. 
                          </p>
                     </section>  
 
@@ -84,6 +84,10 @@
                               VERV-201 ANGPTL3 <progress class="progress-bar" value="10" max="100"></progress>
                               IND Enabling Studies.
                          </p>
+                         <p class="profiles">
+                              Lp&#40;a&#41; <progress class="progress-bar" value="5" max="100"></progress>
+                              Preclinical
+                         </p>
                     </section>
                     
                     <section class="section-container">
@@ -95,7 +99,11 @@
                          </p>
                          <p class="profiles">
                               VERV-201 is a gene editing therapy that knocks out the ANGPTL3 gene. This gene plays a role in triglyceride 
-                              metabolism. There is no data yet for this program. It is still in the preclinic. 
+                              metabolism. The animal data here showed about a 96% reduction in the ANGPTL3. They are working on the IND enabling 
+                              studies and hope to have the IND in 2024.
+                         </p>
+                         <p class="profiles">
+                              Lp&#40;a&#41; is a  target for early lipoprotein which is still in early discovery. 
                          </p>
                     </section>  
 
@@ -111,8 +119,9 @@
                               for being in early phase 1. That comes to $80 million value.
                          </p>
                          <p class="profiles">
-                              VERV-201 I think this program will not only compete with other very competitive cholesterol therapies, but it
-                              will also compete with VERV-101. I still think it could manage about 20,000 patients a year at a price of $40,000. 
+                              VERV-201 I think this program will compete with other very competitive cholesterol therapies.
+                              It is being tested in 2 different cholesteroal diseases with one of them being HoFH.
+                              I think it could manage about 20,000 patients a year at a price of $40,000. 
                               That would make this program about $800 million in sales. I would give them .1 multiplier for the preclinical stage
                               of development. That comes out to another $80 million value.
                          </p>
@@ -124,10 +133,10 @@
                     <section class="section-container">
                          <h2 class="list-header">Events</h2>
                          <p class="profiles">
-                              VERV-101 progressing outside US
+                              VERV-101 Initial Data in 2H 2023 outside US
                          </p>
                          <p class="profiles">
-                              VER-201 IND Enabling Studies
+                              VER-201 First Patient Dosing expected in 2023
                          </p>
                     </section> 
 
