Added internal nav links

--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -58,16 +58,16 @@
                     <h2 class="list-header">Top Innovation Themes</h2>
                     <div class="list-container">
                     <ol class="list-align">
-                         <li class="tech-list">TechBio</li>
-                         <li class="tech-list">CRISPR</li>
-                         <li class="tech-list">Snythetic Biology</li>
-                         <li class="tech-list">iPSC</li>
-                         <li class="tech-list">Personalized Medicine</li>
+                         <li class="tech-list"><a href="#techbio">TechBio</a></li>
+                         <li class="tech-list"><a href="#CRISPR">CRISPR</a></li>
+                         <li class="tech-list"><a href="#synbio">Synthetic Biology</a></li>
+                         <li class="tech-list"><a href="#ipsc">iPSC</a></li>
+                         <li class="tech-list"><a href="#personalized">Personalized Medicine</a></li>
                     </ol>
                     </div>
                </section>
 
-               <section class="container">
+               <section class="container"  id="techbio">
                     <h2 class="section-title">TechBio</h2>
                     <p class="large-text">
                           This area on innovation is all about bringing technology
@@ -90,9 +90,10 @@
                          bring technology into improving the ability of companies to make drugs cheaper and with higher
                          rates of success. This could significantly reduce drug cost over the long term.
                     </p>
+                    <p class="top"><a href="#top">Top</a></p>
                </section>
 
-               <section class="container">
+               <section class="container" id="CRISPR">
                     <h2 class="section-title">CRISPR</h2>
                     <p class="large-text">
                          CRISPR is a gene editing tool which can revolutionize the way we treat genetic diseases 
@@ -110,9 +111,10 @@
                          animals, and microbes could change the world. It can help us solve some of our biggest environmental issues like carbon 
                          emissions and global warming. Combined with other technologies, it can be a very powerful tool.
                     </p>
+                    <p class="top"><a href="#top">Top</a></p>
                </section>
 
-               <section class="container">
+               <section class="container" id="synbio">
                     <h2 class="section-title">Synthetic Biology</h2>
                     <p class="large-text">
                          Synthetic Biology is about taking the tool that is CRISPR gene editing and combining it with the 
@@ -125,9 +127,10 @@
                          cell engineering, chemistry and gene editing could allow us to rewrite life on Earth. It could eventually
                          allow us to colonize and survive on other planets.
                     </p>
+                    <p class="top"><a href="#top">Top</a></p>
                </section>
 
-               <section class="container">
+               <section class="container" id="ipsc">
                     <h2 class="section-title">iPSC</h2>
                     <p class="large-text">
                          Induced Pluripotent Stem cells is an older technology that was discovered about 10 years
@@ -147,9 +150,10 @@
                          at an extremely low cost cell therapies. The power of this technology isn't in a single therapy, but in how the 
                          technology will change the way we manufacture and develop new cell therapies.
                     </p>
+                    <p class="top"><a href="#top">Top</a></p>
                </section>
 
-               <section class="container">
+               <section class="container" id="personalized">
                     <h2 class="section-title">Personalized Medicine</h2>
                     <p class="large-text">
                          Since the age of genetic sequencing is upon us, we can now focus on creating therapies 
@@ -165,6 +169,7 @@
                          Therapies and even other technologies like cell therapies. When it comes to taking on very hard
                          diseases like cancer, we can use all the tools we can get. 
                     </p>
+                    <p class="top"><a href="#top">Top</a></p>
                </section>
           </main>
 
