--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -90,7 +90,7 @@
                          bring technology into improving the ability of companies to make drugs cheaper and with higher
                          rates of success. This could significantly reduce drug cost over the long term.
                     </p>
-                    <p class="top"><a href="#top">Top</a></p>
+                    <p class="top-link"><a href="#top">Top</a></p>
                </section>
 
                <section class="container" id="CRISPR">
@@ -111,7 +111,7 @@
                          animals, and microbes could change the world. It can help us solve some of our biggest environmental issues like carbon 
                          emissions and global warming. Combined with other technologies, it can be a very powerful tool.
                     </p>
-                    <p class="top"><a href="#top">Top</a></p>
+                    <p class="top-link"><a href="#top">Top</a></p>
                </section>
 
                <section class="container" id="synbio">
@@ -127,7 +127,7 @@
                          cell engineering, chemistry and gene editing could allow us to rewrite life on Earth. It could eventually
                          allow us to colonize and survive on other planets.
                     </p>
-                    <p class="top"><a href="#top">Top</a></p>
+                    <p class="top-link"><a href="#top">Top</a></p>
                </section>
 
                <section class="container" id="ipsc">
@@ -150,7 +150,7 @@
                          at an extremely low cost cell therapies. The power of this technology isn't in a single therapy, but in how the 
                          technology will change the way we manufacture and develop new cell therapies.
                     </p>
-                    <p class="top"><a href="#top">Top</a></p>
+                    <p class="top-link"><a href="#top">Top</a></p>
                </section>
 
                <section class="container" id="personalized">
@@ -169,7 +169,7 @@
                          Therapies and even other technologies like cell therapies. When it comes to taking on very hard
                          diseases like cancer, we can use all the tools we can get. 
                     </p>
-                    <p class="top"><a href="#top">Top</a></p>
+                    <p class="top-link"><a href="#top">Top</a></p>
                </section>
           </main>
 
