--- a/pages/ginkgo.html
+++ b/pages/ginkgo.html
@@ -65,13 +65,14 @@
                     <section class="section-container">
                          <h2 class="list-header">Profile</h2>
                          <p class="profiles">
-                              Ginkgo is the leader in Synthetic Biology. They are focused on 2 key franchises with synthetic
+                              Ginkgo is a Commercial Research Orgainzation that is the leader in Synthetic Biology.
+                              They are driving down cost by driving up a level of scale that is commercially beneficial to customers. 
+                              They are focused on 2 key franchises with synthetic
                               biology and biosecurity. The foundry and codebase make up their synthetic biology platform. Synthetic Biology 
                               brings together cell engineering, chemistry and genetic editing to alter the DNA of cells to create new organisms 
                               with new purpose. Their subsidiary Concentric is focused on biosecurity solutions. This is about developing 
                               technologies to detect, test, track and predict pathogens and outbreaks. We live in a world where bioterrorism 
-                              is one of the biggest risks we face. Biosecturity is a necessity we hope will be built to protect people before 
-                              an event makes it reactive instead of proactive.
+                              is one of the biggest risks we face.
 
                          </p>
                     </section>  
@@ -100,8 +101,8 @@
                               Biosecurity is about protecting this new world of biology from pathogens that can harm us. This is about tracking 
                               and preventing pandemics. We live in a world where we have the tools for bad people to create a pathogen that could
                               wipe out the entire world. We need to have the tools to be able to detect, track, contain and prevent these types 
-                              of events. Pathogens do not respect borders which makes this is a global threat. Not taking the steps to prevent the next bad
-                              pandemic won't stop it from happening. The biosecurity franchise is all about building the tools to test and the 
+                              of events. Pathogens do not respect borders which makes this is a global threat. The biosecurity franchise is all
+                              about building the tools to test and the 
                               software to track and model outbreaks.
                          </p>
                     </section>  
@@ -112,12 +113,12 @@
                               Cash $1.3 billion
                          </p>
                          <p class="profiles">
-                              Foundry only earns about $100 million in sales right now. That is because this platform is like a pipeline 
+                              Foundry only earns about $160 million in sales right now. That is because this platform is like a pipeline 
                               for other biotech companies. Programs are put into the foundry when a company partners with Ginkgo. It can take
                               years for these programs to be completed to the level of commercial launch. They get paid a small amount for their 
                               work, but most of the value is in the form of Equity Stakes, Royalties and Milestones. The key here is to watch 
                               the number of programs they have in their pipeline. That is the indicator of potential future revenues. I think they 
-                              could reach $1 billion in foundry revenues in the next 7 to 10 years. I would give this a value of $1 billion 
+                              could reach $1 billion in foundry revenues in the next 7 to 10 years. I would give this a value of $1.6 billion 
                               based on realistic price to sales on their current foundry sales.
                          </p>
                          <p class="profiles">
@@ -127,7 +128,7 @@
                               in value based on a realistic price to sales. 
                          </p>
                          <p class="profiles">
-                              All in, that is a $5.3 billion market cap. Based on the 1.6 billion shares outstanding , that comes to $3.31.
+                              All in, that is a $5.9 billion market cap. Based on the 1.6 billion shares outstanding , that comes to $3.68.
                          </p>
                     </section>  
 
