--- a/pages/excientia.html
+++ b/pages/excientia.html
@@ -58,7 +58,7 @@
                <p class="updated">Last Updated 1/13/2023</p>
 
 
-               <h1 class="company-name">Exscientia</h1>
+               <h1 class="company-name"><a href="https://www.exscientia.ai/">Exscientia</a></h1>
 
                <div  class="company-layout">
 
