--- a/pages/ipsc.html
+++ b/pages/ipsc.html
@@ -55,9 +55,9 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <p class="updated">Last Updated 1/12/2023</p>
+               <p class="updated">Last Updated 1/13/2023</p>
 
-               <h1 class="company-name">Century Therapeutics</h1>
+               <h1 class="company-name"><a href="https://www.centurytx.com/">Century Therapeutics</a></h1>
 
                <div  class="company-layout">
 
@@ -71,7 +71,7 @@
                               NK cells and Gamma/Delta T cells. This technology is engineering cells for immune therapies for cancer. 
                               They build these common progenitor cells that have many edits to give them extra benefits and allo 
                               evasion attributes. These common progenitor cells can become a starting stock for all their CAR-NK and 
-                              CAR-T cells. Once they have the master banks of commong progenitor cells, they can use them 
+                              CAR-T cells. Once they have the master banks of common progenitor cells, they can use them 
                               for all their new therapies by just inserting different CAR receptors into them before developing 
                               them down their path to NK or T cells.
                          </p>
