--- a/pages/recursion.html
+++ b/pages/recursion.html
@@ -58,7 +58,7 @@
                <p class="updated">Last Updated 1/12/2023</p>
 
 
-               <h1 class="company-name">Recursion Pharma</h1>
+               <h1 class="company-name"><a href="https://www.recursion.com/">Recursion Pharma</a></h1>
 
                <div  class="company-layout">
 
