--- a/pages/relay.html
+++ b/pages/relay.html
@@ -57,7 +57,7 @@
           <main>
                <p class="updated">Last Updated 1/12/2023</p>
 
-               <h1 class="company-name">Relay Therapeutics</h1>
+               <h1 class="company-name"><a href="https://relaytx.com/">Relay Therapeutics</a></h1>
 
                <div  class="company-layout">
 
