--- a/pages/abcellera.html
+++ b/pages/abcellera.html
@@ -58,7 +58,7 @@
                <p class="updated">Last Updated 1/12/2023</p>
 
 
-               <h1 class="company-name">AbCellera</h1>
+               <h1 class="company-name"><a href="https://abcellera.com/">AbCellera</a></h1>
 
                <div  class="company-layout">
 
