--- a/pages/ginkgo.html
+++ b/pages/ginkgo.html
@@ -57,7 +57,7 @@
           <main>
                <p class="updated">Last Updated 1/13/2023</p>
 
-               <h1 class="company-name">Ginkgo Bioworks</h1>
+               <h1 class="company-name"><a href="https://www.ginkgobioworks.com/">Ginkgo Bioworks</a></h1>
 
                <div  class="company-layout">
 
