--- a/pages/intellia.html
+++ b/pages/intellia.html
@@ -57,7 +57,7 @@
           <main>
                <p class="updated">Last Updated 1/12/2023</p>
 
-               <h1 class="company-name">Intellia Therapeutics</h1>
+               <h1 class="company-name"><a href="https://www.intelliatx.com/">Intellia Therapeutics</a></h1>
 
                <div  class="company-layout">
 
