--- a/pages/prime.html
+++ b/pages/prime.html
@@ -57,7 +57,7 @@
           <main>
                <p class="updated">Last Updated 1/13/2023</p>
 
-               <h1 class="company-name">Prime Medicine</h1>
+               <h1 class="company-name"><a href="https://primemedicine.com/">Prime Medicine</a></h1>
 
                <div  class="company-layout">
 
