--- a/pages/sana.html
+++ b/pages/sana.html
@@ -57,7 +57,7 @@
           <main>
                <p class="updated">Last Updated 1/12/2023</p>
 
-               <h1 class="company-name">Sana Biotechnology</h1>
+               <h1 class="company-name"><a href="https://sana.com/">Sana Biotechnology</a></h1>
 
                <div  class="company-layout">
 
