--- a/pages/twist.html
+++ b/pages/twist.html
@@ -57,7 +57,7 @@
           <main>
                <p class="updated">Last Updated 1/12/2023</p>
 
-               <h1 class="company-name">Twist Bioscience</h1>
+               <h1 class="company-name"><a href="https://www.twistbioscience.com/">Twist Bioscience</a></h1>
 
                <div  class="company-layout">
 
@@ -92,7 +92,8 @@
                          </p>
                          <p class="profiles">
                               They have a second business in the Next Gen Sequencing space by developing various testing kits. They 
-                              have various different kits they offer for sale. This is another business that does well.
+                              have various different kits they offer for sale. Their kits are 50% more efficient for the required amount 
+                              of sequencing needed. This is another business that does well.
                          </p>
                          <p class="profiles">
                               They have a third business around developing antibodies for companies. This is a very early stage business 
