--- a/pages/verve.html
+++ b/pages/verve.html
@@ -57,7 +57,7 @@
           <main>
                <p class="updated">Last Updated 1/13/2023</p>
 
-               <h1 class="company-name">Verve Therapeutics</h1>
+               <h1 class="company-name"><a href="https://www.vervetx.com/">Verve Therapeutics</a></h1>
 
                <div  class="company-layout">
 
