Added Caribou and Fate

--- a/pages/companies.html
+++ b/pages/companies.html
@@ -117,8 +117,12 @@
                          <li class="tech-list">
                               <a href="../pages/sana.html">Sana Biotechnology (SANA)</a>
                          </li>
-                         <li class="tech-list">Fate Therapeutics</li>
-                         <li class="tech-list">Caribou Biosciences</li>
+                         <li class="tech-list">
+                              <a href="../pages/fate.html">Fate Therapeutics (FATE)</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/caribou.html">Caribou Biosciences (CRBU)</a>
+                         </li>
                     </ol>
                </section>  
 
