--- a/pages/sana.html
+++ b/pages/sana.html
@@ -68,7 +68,9 @@
                               stem cell therapies. Their delivery platform is about using virus-like particles with fusion proteins 
                               in them to develop targeted delivery  to cells. This is a very interesting delivery platform. The big issue
                               will be their manufacturing. They will need to make some breakthroughs on the technology to reach a 
-                              commercial scale for this kind of delivery system. The other platform is for making iPSC cells for cell therapies. 
+                              commercial scale for this kind of delivery system. The other platform is for making iPSC cells for cell therapies.
+                              This is where they take differentiated cells and turn them back into stem cells. Then they edit their DNA to make 
+                              master banks of cells for therapies. 
                               They are focused on CAR-T therapies. They are developing other cell therapies around islet cells, liver cells, and 
                               glial cells. They have hypoimmune edits for their cell therapies to mask these cells from 
                               the immune system. 
@@ -86,7 +88,7 @@
                               IND in 2023
                          </p>
                          <p class="profiles">
-                              SC263 - CD22 <progress class="progress-bar" value="5" max="100"></progress>
+                              SC262 - CD22 <progress class="progress-bar" value="5" max="100"></progress>
                               IND in 2023
                          </p>
                          <p class="profiles">
@@ -105,13 +107,14 @@
                          <p class="profiles">
                               SG295 is for CD19 for patients with B cell lymphomas.  This is their in-vivo fusogen delivered CAR-T cell therapy. 
                               They have the hypoimmune edits in these cells. This data will inform us of what 
-                              hypoimmune contributes to the durability of these cell therapies. They are planning the IND for this program 
+                              fugogen contributes to these cell therapies. This could completely change how we do cell therapies if it works well. 
+                              They are planning the IND for this program 
                               in 2023. 
                          </p>
                          <p class="profiles">
                               SC262 is for CD22 for patients with B cell lymphomas. This would be for patients who failed CD19 or
-                              it can be combined with other CD19 therapies. They do have the hypoimmune edits in these cells. This data will inform us of what 
-                              hypoimmune contributes to the durability of these cell therapies. It will also be our first look at CD22 as a target. 
+                              it can be combined with other CD19 therapies. They do have the hypoimmune edits in these cells. It will 
+                              also be our first look at CD22 as a target. This data will inform us to what CD22 can contribute to cell therapies.
                               They plan to submit an IND for this program in 2023.
                          </p>
                          <p class="profiles">
