--- a/pages/companies.html
+++ b/pages/companies.html
@@ -129,11 +129,13 @@
                <section>
                     <h2 class="list-header">Personalized Medicine</h2>
                     <ol>
-                         <li class="tech-list">Blueprint Medicines</li>
+                         <li class="tech-list">
+                              <a href="../pages/blueprint.html">Blueprint Medicines (BPMC)</a>
+                         </li>
                          <li class="tech-list">Kymera Therapeutics</li>
                          <li class="tech-list">Mirati Therapeutics</li>
-                         <li class="tech-list">Monte Rosa Therapeutics</li>
                          <li class="tech-list">Revolution Medicines</li>
+                         <li class="tech-list">Monte Rosa Therapeutics</li>
                     </ol>
                </section>  
 
