--- a/pages/schrodinger.html
+++ b/pages/schrodinger.html
@@ -58,7 +58,7 @@
                <p class="updated">Last Updated 1/12/2023</p>
 
 
-               <h1 class="company-name"><a href="https://www.schrodinger.com/">Schrodiner</a></h1>
+               <h1 class="company-name"><a href="https://www.schrodinger.com/">Schrodinger</a></h1>
 
                <div  class="company-layout">
 
