--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                     <p class="large-text">
                          The next section of the site will be about the science behind the companies. I tend to focus on
                          a few key science themes with Genetics, Hematology, Immunology and Oncology. They tend to be 
-                         very complementary with each other when it comes to diseases. I have a huge focus on the use of
-                         technology in drug discovery, genetic disease and oncology. I find having a focus on a few key topics
-                         offers expertise to focus and helps me improve my success rates. I love teaching others about science.
+                         very complementary with each other when it comes to diseases. I tend to focus on the use of
+                         technology in drug discovery, genetic diseases and oncology. I find having a focus on a few key topics
+                         offers expertise and helps me improve my success rates. I love teaching others about science.
                          This section will include everything educational about topics like Hematology, 
                          Immunology, Genetics and Oncology. This is a learning resource. It is not necessary to know the science
                          to be a biotechnology investor, but it really helps. I find that scientists, doctors, students
@@ -139,7 +139,7 @@
                          the clinical trials and the data to look for, but a lot of it will be going through actual clinical 
                          data readouts by companies and breaking it down. I am not an expert in reading clinical data, but I 
                          have been doing it for many years. Most of the takes I give on clinical data will be just my point
-                         of view. Other investors might not agree with my point of view on any data readout. That is OK. There
+                         of view. Other investors might not agree with my point of view on any data readouts. That is OK. There
                          is a lot to consider when looking at data to include data from competitors.
                     </p>
                </section>
