--- a/pages/companies.html
+++ b/pages/companies.html
@@ -132,7 +132,9 @@
                          <li class="tech-list">
                               <a href="../pages/blueprint.html">Blueprint Medicines (BPMC)</a>
                          </li>
-                         <li class="tech-list">Kymera Therapeutics</li>
+                         <li class="tech-list">
+                              <a href="../pages/kymera.html">Kymera Therapeutic (KYMR)</a>
+                         </li>
                          <li class="tech-list">Mirati Therapeutics</li>
                          <li class="tech-list">Revolution Medicines</li>
                          <li class="tech-list">Monte Rosa Therapeutics</li>
