--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -86,8 +86,8 @@
                          AI can also be used to take genetic and biological data and make connections between
                          mechanisms of biology and genetics that we may never have thought of before. This can open 
                          up new potential breakthroughs in diseases that have been hard to crack like Alzheimer's 
-                         The future of biotechnology will belong to the companies that embrace these technologies that
-                         bring technology into improving the ability of companies to make drugs cheaper and with higher
+                         The future of biotechnology will belong to the companies that embrace these new technologies.
+                         Technology can improve the ability of companies to make drugs cheaper and with higher
                          rates of success. This could significantly reduce drug cost over the long term.
                     </p>
                     <p class="top-link"><a href="#top">Top</a></p>
@@ -120,7 +120,7 @@
                          Synthetic Biology is about taking the tool that is CRISPR gene editing and combining it with the 
                          technology of cell engineering to create new life. It is about taking microbes and rewriting their DNA
                          to create new organisms that have beneficial impacts. We can make microbes that produce sustainable sources
-                         of key proteins or chemical ingredients. We can make microbes with completely new benefits. We can make
+                         of key proteins or chemical ingredients. We can make
                          organisms that produce fertilizer right in the soil. We can use it to build plants that are better at
                          surviving and produce higher yields. We can make microbes to detect or even clean pollution and other
                          toxins in the environment. We can use it to produce cells in humans that work as therapies. Combining 
@@ -145,9 +145,9 @@
                          will be able to take sample cells from a patient and create whole organs from iPSC cells by guiding
                          them down the path to differentiation. Today, the focus is on using them to create low cost
                          manufacturing for immune cells in cell therapies. They can edit a stem cell with all the desired edits
-                         they can make master banks of these stem cells. Then they can walk them down the path of growth
+                         and use it to create a master bank of engineered stem cells. Then they can walk them down the path of growth
                          into T cells or NK cells for fighting cancer. This offers a low cost way to make thousands of doses
-                         at an extremely low cost cell therapies. The power of this technology isn't in a single therapy, but in how the 
+                         at an extremely low cost. The power of this technology isn't in a single therapy, but in how the 
                          technology will change the way we manufacture and develop new cell therapies.
                     </p>
                     <p class="top-link"><a href="#top">Top</a></p>
@@ -156,7 +156,7 @@
                <section class="container" id="personalized">
                     <h2 class="section-title">Personalized Medicine</h2>
                     <p class="large-text">
-                         Since the age of genetic sequencing is upon us, we can now focus on creating therapies 
+                         Since the age of low cost genetic sequencing is upon us, we can now focus on creating therapies 
                          that are designed to target key genetic mutations in diseases like cancer. We can sequence 
                          these tumors and get the types of mutations that distinguish them from healthy cells. Then
                          we can create therapies that target these key mutations. We have seen this space evolve 
